# NASAHackathon2025

./: .gitattributes  .gitignore  DUMP.md  PLAN.md  README.md  pnpm-lock.yaml  vercel.json
backend/: .gitignore  README.md  main.py  pyproject.toml  start_server.sh  test_api.py
config/: .env  .env.example
docs/: 3d-visualization.md  backend-setup.md  background-loading.md  data-fetching.md  frontend-integration.md  frontend-overview.md  index.md  project-plan.md  valuation-process.md
frontend/: .env  .env.example  .gitattributes  .gitignore  3D_VISUALIZATION_README.md  ASTEROID_PROFIT_README.md  BACKGROUND_LOADING_IMPLEMENTATION.md  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/scripts/: SplitNeoData.js  fetchAllNeoData.js  startFreshFetch.js
frontend/src/: App.vue  main.ts
frontend/src/api/: neo.ts  sbdb.ts
frontend/src/assets/: main.css
frontend/src/components/: AboutPage.vue  AppHeader.vue  AsteroidDetails.vue  AsteroidSelector.vue  AsteroidSimulation.vue  CloseApproachData.vue  WorthEstimation.vue  WorthEstimation.vue.new
frontend/src/composables/: useAsteroidCache.ts  useAsteroidCalculations.ts  useAsteroids.ts  useComposition.ts  useIndexedDBCache.ts  useOrbitalData.ts
frontend/src/data/: all_neo_data.json  neo_fetch_checkpoint.json  sbdb_query_results.csv
frontend/src/types/: asteroid.ts
frontend/src/utils/: catalogLoader.ts  orbitalMechanics.ts  threeScene.ts
src/: App.vue
